--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Home Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <div class="brand">
+      <img src="logo.png" alt="Logo" class="logo">
+      <a href="#" id="name">2000s Filmography</a>
+    </div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="works.html">Movie Recommendations</a>
+      <a href="contact.html">Trailers</a>
+    </nav>
+  </header>
+</body>
