--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <a href="#" id="name">2000s Filmography</a>
     </div>
     <nav>
-      <a href="#about">About</a>
-      <a href="works.html">Movie Recommendations</a>
-      <a href="contact.html">Trailers</a>
+      <a href="#">Home</a>
+      <a href="recommendations.html">Recommendations</a>
+      <a href="about.html">About</a>
     </nav>
   </header>
 </body>
