drafted the pages and stylesheet

--- a/index.html
+++ b/index.html
@@ -2,19 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us – 2000s Filmography</title>
   <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header>
-    <div class="brand">
-      <img src="logo.png" alt="Logo" class="logo">
-      <a href="#" id="name">2000s Filmography</a>
-    </div>
+    <h1>2000s Filmography</h1>
+
+    <!-- Hamburger Menu -->
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">&#9776;</label>
+
     <nav>
-      <a href="#">Home</a>
-      <a href="about.html">About</a>
+      <a href="index.html">Home</a>
       <a href="recommendations.html">Recommendations</a>
+      <a href="trailers.html">Trailers</a>
     </nav>
   </header>
+
+  <main>
+    <section class="about">
+      <img src="images/about-image.png" alt="Retro TV">
+      <div class="about-text">
+        <h2>WELCOME!</h2>
+        <p>
+          Welcome to our 2000s Filmography archive – your ultimate throwback spot for all the iconic movies that defined an era!  
+          Whether you’re rewatching your all-time faves or discovering them for the first time, this site celebrates the unforgettable Y2K vibes that shaped a generation.
+        </p>
+        <p>
+          So grab your popcorn and relive the magic of the 2000s with us 💖
+        </p>
+        <a href="index.html" class="btn">Catalog</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 2000s Filmography | Art Beyond Boundaries</p>
+  </footer>
 </body>
+</html>
