Updated index and footers

--- a/index.html
+++ b/index.html
@@ -24,23 +24,37 @@
 
   <main>
     <section class="about">
-      <img src="images/about-image.png" alt="Retro TV">
-      <div class="about-text">
-        <h2>WELCOME!</h2>
-        <p>
-          Welcome to our 2000s Filmography archive – your ultimate throwback spot for all the iconic movies that defined an era!  
-          Whether you’re rewatching your all-time faves or discovering them for the first time, this site celebrates the unforgettable Y2K vibes that shaped a generation.
-        </p>
-        <p>
-          So grab your popcorn and relive the magic of the 2000s with us 💖
-        </p>
+      <div class="about-box">
+        <div class="about-content">
+          <img src="images/about-image.png" alt="Retro TV">
+          <div class="about-text">
+            <h2>WELCOME!</h2>
+            <p>
+              Welcome to our 2000s Filmography archive – your ultimate throwback spot for all the iconic movies that defined an era!
+              From teen rom-coms to girl power classics, we’ve gathered the films that made us laugh, cry, and quote every line.
+            </p>
+            <p>
+              Here, you’ll find gems like <strong>10 Things I Hate About You</strong>, <strong>Legally Blonde</strong>,
+              <strong>Wild Child</strong>, <strong>Mean Girls</strong>, and so many more. Whether you’re rewatching your
+              all-time faves or discovering them for the first time, this page is all about celebrating the unforgettable
+              Y2K vibes that shaped a generation.
+            </p>
+            <p>
+              So grab your popcorn, put on your pink outfit (because on Wednesdays we wear pink 💅), and relive the magic of the 2000s with us!
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="catalog-link">
+        <p>Don’t know what to watch? Visit our catalog!</p>
         <a href="index.html" class="btn">Catalog</a>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 2000s Filmography | Art Beyond Boundaries</p>
+    <p>&copy; 2025 2000s Filmography | Your IT girl lessons start here</p>
   </footer>
 </body>
 </html>
