--- a/trailers.html
+++ b/trailers.html
@@ -43,7 +43,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 2000s Filmography | Relive the Magic</p>
+    <p>&copy; 2025 2000s Filmography | Your IT girl lessons starts here</p>
   </footer>
 </body>
 </html>
