--- a/recommendations.html
+++ b/recommendations.html
@@ -53,7 +53,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 2000s Filmography | Relive the Magic of the 2000s</p>
+    <p>&copy; 2025 2000s Filmography | Your IT girl lessons starts here</p>
   </footer>
 </body>
 </html>
