edited source for image in index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="about">
       <div class="about-box">
         <div class="about-content">
-          <img src="images/about-image.png" alt="Retro TV">
+          <img src="Assets/Images/TV.png" alt="Retro TV">
           <div class="about-text">
             <h2>WELCOME!</h2>
             <p>
