added more movies to recommendations

--- a/recommendations.html
+++ b/recommendations.html
@@ -49,6 +49,18 @@
         <img src="images/legallyblonde.jpg" alt="Legally Blonde">
         <p>Legally Blonde (2001)</p>
       </div>
+      <div class="movie">
+        <img src="images/wildchild.jpg" alt="Wild Child">
+        <p>Wild Child (2008)</p>
+      </div>
+      <div class="movie">
+        <img src="images/thedevilwearsprada.jpg" alt="The Devil Wears Prada">
+        <p>The Devil Wears Prada (2006)</p>
+      </div>
+      <div class="movie">
+        <img src="images/clueless.jpg" alt="Clueless">
+        <p>Clueless (2008)</p>
+      </div>
     </section>
   </main>
 
