--- a/recommendations.html
+++ b/recommendations.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2000s Filmography</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/Assets/styles.css">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -69,3 +69,4 @@
   </footer>
 </body>
 </html>
+
