--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us – 2000s Filmography</title>
-  <link rel="stylesheet" href="Assets\styles.css">
+  <link rel="stylesheet" href="/Assets/styles.css">
   <script defer src="script.js"></script>
 </head>
 <body>
