fixed asset linking

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us – 2000s Filmography</title>
   <link rel="stylesheet" href="/Assets/styles.css">
-  <script defer src="script.js"></script>
+  <script defer src="/Assets/main.js"></script>
 </head>
 <body>
   <header>
