fixed a few colors in css and adjusted image linking

--- a/recommendations.html
+++ b/recommendations.html
@@ -24,41 +24,41 @@
 
   <main>
     <section class="hero">
-      <img src="images/13goingon30.jpg" alt="13 Going on 30 Poster">
+      <img src="Assets/Images/13 going on 30 landscape poster.webp" alt="13 Going on 30 Poster">
       <h2>Hot Recommendations for You 💋</h2>
     </section>
 
     <section class="catalog">
       <div class="movie">
-        <img src="images/whitechicks.jpg" alt="White Chicks">
+        <img src="Assets/Images/whitechicks.jpg" alt="White Chicks">
         <p>White Chicks (2004)</p>
       </div>
       <div class="movie">
-        <img src="images/10things.jpg" alt="10 Things I Hate About You">
+        <img src="Assets/Images/10-things-i-hate-about-you-movie-poster-800x1200.jpg" alt="10 Things I Hate About You">
         <p>10 Things I Hate About You (1999)</p>
       </div>
       <div class="movie">
-        <img src="images/princessdiaries.jpg" alt="The Princess Diaries">
+        <img src="Assets/Images/The Princess Diaries Poster.jpeg" alt="The Princess Diaries">
         <p>The Princess Diaries (2001)</p>
       </div>
       <div class="movie">
-        <img src="images/meangirls.jpg" alt="Mean Girls">
+        <img src="Assets/Images/Mean Girls Poster.jpg" alt="Mean Girls">
         <p>Mean Girls (2004)</p>
       </div>
       <div class="movie">
-        <img src="images/legallyblonde.jpg" alt="Legally Blonde">
+        <img src="Assets/Images/Legally Blonde Poster.jpg" alt="Legally Blonde">
         <p>Legally Blonde (2001)</p>
       </div>
       <div class="movie">
-        <img src="images/wildchild.jpg" alt="Wild Child">
+        <img src="Assets/Images/Wild Child Poster.jpeg" alt="Wild Child">
         <p>Wild Child (2008)</p>
       </div>
       <div class="movie">
-        <img src="images/thedevilwearsprada.jpg" alt="The Devil Wears Prada">
+        <img src="Assets/Images/The Devil Wears Prada Poster.jpeg" alt="The Devil Wears Prada">
         <p>The Devil Wears Prada (2006)</p>
       </div>
       <div class="movie">
-        <img src="images/clueless.jpg" alt="Clueless">
+        <img src="Assets/Images/Clueless poster.jpg" alt="Clueless">
         <p>Clueless (2008)</p>
       </div>
     </section>
