minor adjustments to image linking

--- a/recommendations.html
+++ b/recommendations.html
@@ -30,7 +30,7 @@
 
     <section class="catalog">
       <div class="movie">
-        <img src="Assets/Images/whitechicks.jpg" alt="White Chicks">
+        <img src="Assets/Images/White Chicks Poster.jpg" alt="White Chicks">
         <p>White Chicks (2004)</p>
       </div>
       <div class="movie">
