linked catalog button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="catalog-link">
         <p>Don’t know what to watch? Visit our catalog!</p>
-        <a href="index.html" class="btn">Catalog</a>
+        <a href="recommendations.html" class="btn">Catalog</a>
       </div>
     </section>
   </main>
