image linking for reco

--- a/trailers.html
+++ b/trailers.html
@@ -41,10 +41,10 @@
     <section class="more-trailers">
       <h3>More Movies Like This 💋</h3>
       <div class="gallery">
-        <img src="/Assets/Images/meangirls.png" alt="Mean Girls">
-        <img src="/Assets/Images/legallyblonde.jpg" alt="Legally Blonde">
-        <img src="/Assets/Images/WildChild.jpg" alt="Wild Child">
-        <img src="/Assets/Images/13going30.png" alt="13 Going on 30">
+        <img src="Assets/Images/meangirls.png" alt="Mean Girls">
+        <img src="Assets/Images/legallyblonde.jpg" alt="Legally Blonde">
+        <img src="Assets/Images/WildChild.jpg" alt="Wild Child">
+        <img src="Assets/Images/13going30.png" alt="13 Going on 30">
       </div>
     </section>
   </main>
