--- a/trailers.html
+++ b/trailers.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trailers – 2000s Filmography</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="main.js"></script>
+  <link rel="stylesheet" href="Assets/styles.css">
+  <script defer src="Assets/main.js"></script>
 </head>
 <body>
   <header>
