--- a/recommendations.html
+++ b/recommendations.html
@@ -11,11 +11,9 @@
   <header>
     <h1>2000s Filmography</h1>
 
-    <!-- Hamburger Menu -->
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="menu-icon">&#9776;</label>
+    <div class="menu-icon" id="menu-btn">&#9776;</div>
 
-    <nav>
+    <nav id="nav-menu">
       <a href="index.html">Home</a>
       <a href="recommendations.html">Recommendations</a>
       <a href="trailers.html">Trailers</a>
