--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 2000s Filmography | Your IT girl lessons start here</p>
+    <p>2025 2000s Filmography | Your IT girl lessons start here</p>
+    <p>&copy; Kenneth Guanlao, Renzo Nengasca, Ella Nicole Rivera</p>
   </footer>
 </body>
 </html>
