added group members names

--- a/recommendations.html
+++ b/recommendations.html
@@ -63,7 +63,8 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 2000s Filmography | Your IT girl lessons starts here</p>
+    <p>2000s Filmography | Your IT girl lessons start here</p>
+    <p>&copy; 2025 | Kenneth Guanlao, Renzo Nengasca, Ella Nicole Rivera</p>
   </footer>
 </body>
 </html>
